gccida/g2/reverse_condition
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reverse_condition/src/jump.c:1247:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code  reverse_condition( rtx_code code) 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reverse_condition/src/jump.c:1247:30: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code  reverse_condition( rtx_code code) 
                             ^
                             enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reverse_condition/src/jump.c:1253:24: error: use of undeclared identifier 'rtx_code'; did you mean 'rtx_cost'?
reverse_condition_0( ( rtx_code)v1); 
                       ^~~~~~~~
                       rtx_cost
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reverse_condition/src/rtl.h:1787:12: note: 'rtx_cost' declared here
extern int rtx_cost                     PARAMS ((rtx, enum rtx_code));
           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reverse_condition/src/jump.c:1253:33: error: expected ')'
reverse_condition_0( ( rtx_code)v1); 
                                ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reverse_condition/src/jump.c:1253:20: note: to match this '('
reverse_condition_0( ( rtx_code)v1); 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reverse_condition/src/jump.c:1254:8: error: use of undeclared identifier 'CSWTCH_103'
return CSWTCH_103[v1]; 
       ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reverse_condition/src/obj/jump.o] Error 1
